<resources>
    <string name="app_name">Artsy</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fairs">fairs</string>
    <string name="biography_caps">BIOGRAPHY</string>
    <string name="artists">artists</string>
    <string name="nationality">nationality</string>
    <string name="related_artsists">Related Artsists</string>
    <string name="bio_body">Bio Body</string>
    <string name="stats">STATS</string>
    <string name="Following">Following</string>
    <string name="home">Home</string>
    <string name="people">People</string>
    <string name="messages">Messages</string>
    <string name="notification">Notification</string>
    <string name="artsy_market_header">BUYING ART ON ARTSY IS SIMPLE</string>
    <string name="hearticon">heartIcon</string>
    <string name="follow_artists_and_find_works_you_love">Follow artists and find works you love</string>
    <string name="find_your_ongoing_conversations_and_bidding_activity_here">Find your ongoing conversations and bidding activity here</string>
    <string name="contact_galleries_or_bid_in_auctions_to_purchase_the_works">Contact galleries or bid in auctions to purchase the works</string>
    <string name="easily_process_payment_through_our_secure_platform">Easily process payment through our secure platform</string>
    <string name="follow">Follow</string>
    <string name="recommended_works_for_you">Recommended works for you</string>
    <string name="artists_to_follow">Artists to Follow:</string>
    <string name="recommended_for_you">Recommended for You</string>
    <string name="recommended_art_fairs">Recommended Art Fairs</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="popular_on_artsy">Popular on Artsy</string>
    <string name="first_recentview">first_recentView</string>
    <string name="second_recentview">second recentView</string>
    <string name="third_recentview">third recentView</string>
    <string name="trending_artworks">Trending Artworks</string>
    <string name="artwork_title">Artwork Title</string>
    <string name="country_birth_year">Country, Birth Year</string>
    <string name="artist_name">Artist Name</string>
    <string name="favorite">Favorite</string>
</resources>
