<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_button"
        android:title="@string/home"
        android:visible="true"
        android:icon="@drawable/home_button"
        />

    <item
        android:id="@+id/search_button"
        android:title="@string/people"
        android:visible="true"
        android:icon="@drawable/ic_search_image" />


    <item
        android:id="@+id/auction_button"
        android:title="@string/messages"
        android:visible="true"
        android:icon="@drawable/ic_messaging_image"/>



    <item
        android:id="@+id/saves_button"
        android:title="@string/notification"
        android:visible="true"
        android:icon="@drawable/ic_favorites_image" />



</menu>