<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/artistToFollow_RV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recc_for_youTV"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/recc_for_youTV"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/popular_on_artsy"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artistToFollow_TV" />

        <TextView
            android:id="@+id/artistToFollow_TV"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/artists_to_follow"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentlyViewed_IV3" />


        <ImageView
            android:id="@+id/recentlyViewed_IV4"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/recentlyViewed_IV3"
            app:layout_constraintBottom_toTopOf="@+id/artistToFollow_TV"
            app:layout_constraintStart_toEndOf="@+id/recentlyViewed_IV3"
            app:layout_constraintTop_toBottomOf="@+id/recentlyViewed_IV2"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/recentlyViewed_IV3"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/artistToFollow_TV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentlyViewed_IV1"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/third_recentview" />

        <ImageView
            android:id="@+id/recentlyViewed_IV2"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toEndOf="@+id/recentlyViewed_IV1"
            app:layout_constraintTop_toBottomOf="@+id/recentlyviewed_TV"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/second_recentview" />

        <ImageView
            android:id="@+id/recentlyViewed_IV1"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:background="@color/cardview_dark_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recentlyviewed_TV"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/first_recentview" />

        <TextView
            android:id="@+id/recentlyviewed_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/recently_viewed"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artFair_recycler" />

        <TextView
        android:id="@+id/recArtFairsTV"
        android:layout_width="277dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/recommended_art_fairs"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/artFair_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/recArtFairsTV"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>